@@ -137,6 +137,7 @@ public class CheckpointingMultiMap<K extends @Signed Object, V extends @Signed O
   }
 
   /** Undo changes since the last call to {@link #mark()}. */
+  @SuppressWarnings("ListRemoveAmbiguous")
   public void undoToLastMark() {
     if (marks.isEmpty()) {
       throw new IllegalArgumentException("No marks.");
@@ -145,11 +146,14 @@ public class CheckpointingMultiMap<K extends @Signed Object, V extends @Signed O
     for (int i = 0; i < steps; i++) {
       undoLastOp();
     }
-    steps = marks.remove(marks.size() - 1);
+    // On Java 11+, use: steps = marks.removeLast();
+    steps = marks.remove(marks.size() - 1); // index-based removal: remove the last element
   }
 
   private void undoLastOp() {
-    if (ops.isEmpty()) throw new IllegalStateException("ops empty.");
+    if (ops.isEmpty()) {
+      throw new IllegalStateException("ops empty.");
+    }
     OpKeyVal last = ops.remove(ops.size() - 1);
     Ops op = last.op;
     K key = last.key;
@@ -171,7 +175,9 @@ public class CheckpointingMultiMap<K extends @Signed Object, V extends @Signed O
 
   @Override
   public Set<V> getValues(K key) {
-    if (key == null) throw new IllegalArgumentException("arg cannot be null.");
+    if (key == null) {
+      throw new IllegalArgumentException("arg cannot be null.");
+    }
     return map.getOrDefault(key, Collections.emptySet());
   }
 
@@ -182,7 +188,9 @@ public class CheckpointingMultiMap<K extends @Signed Object, V extends @Signed O
    * @return true if this map contains the given key
    */
   public boolean containsKey(@UnknownSignedness Object key) {
-    if (key == null) throw new IllegalArgumentException("arg cannot be null.");
+    if (key == null) {
+      throw new IllegalArgumentException("arg cannot be null.");
+    }
     return map.containsKey(key);
   }
 
